--- a/advertising-demo-app/app/src/main/res/values/strings.xml
+++ b/advertising-demo-app/app/src/main/res/values/strings.xml
@@ -59,11 +59,14 @@
     <string name="open_banner_view">XML-layout</string>
     <string name="open_programmatically_view">programmatically-layout</string>
     <string name="open_recycler_view">Recycler-View</string>
-    <string name="audio_player">Audio player</string>
     <string name="video_player">Video Player</string>
     <string name="settings">Settings</string>
     <string name="save">Save</string>
     <string name="native_banner_view">Native banner view</string>
     <string name="scrollable_layout_screen_button">Scrollable layout</string>
     <string name="use_rtb_for_audio_advertisement">Use RTB for audio advertisement</string>
+    <string name="banner_viewed_alert">id: %s | event: VIEWED</string>
+    <string name="banner_loaded_alert">id: %s | event: LOADED</string>
+    <string name="banner_tapped_alert">id: %s | event: CLICKED</string>
+    <string name="placeholder_show_hide">PLACEHOLDER SHOW/HIDE</string>
 </resources>
