--- a/advertising-demo-app/app/src/main/res/values/strings.xml
+++ b/advertising-demo-app/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright © Gusev Andrew, Emelianov Andrew, Spinov Dmitry [collectively referred as the Authors], 2017-2022 - All Rights Reserved
+  ~ Copyright © Gusev Andrew, Emelianov Andrew, Spinov Dmitry [collectively referred as the Authors], 2017 - All Rights Reserved
   ~ [NOTICE: All information contained herein is, and remains the property of the Authors.](notice: All information contained herein is, and remains the property of the Authors.)
   ~ The intellectual and technical concepts contained herein are proprietary to the Authors
   ~ and may be covered by any existing patents of any country in the world, patents in
@@ -65,8 +65,5 @@
     <string name="native_banner_view">Native banner view</string>
     <string name="scrollable_layout_screen_button">Scrollable layout</string>
     <string name="use_rtb_for_audio_advertisement">Use RTB for audio advertisement</string>
-    <string name="banner_viewed_alert">id: %s | event: VIEWED</string>
-    <string name="banner_loaded_alert">id: %s | event: LOADED</string>
-    <string name="banner_tapped_alert">id: %s | event: CLICKED</string>
     <string name="placeholder_show_hide">PLACEHOLDER SHOW/HIDE</string>
 </resources>
