--- a/advertising-demo-app/app/src/main/res/values/strings.xml
+++ b/advertising-demo-app/app/src/main/res/values/strings.xml
@@ -56,15 +56,25 @@
     <string name="id_of_publisher">ID of publisher</string>
     <string name="publisher_id">Publisher ID</string>
     <string name="enable_compression">Enable compression</string>
-    <string name="open_banner_view">XML-layout</string>
-    <string name="open_programmatically_view">programmatically-layout</string>
-    <string name="open_recycler_view">Recycler-View</string>
+    <string name="open_programmatically_view">programmatically</string>
+    <string name="open_recycler_view">RECYCLER VIEW</string>
     <string name="video_player">Video Player</string>
     <string name="settings">Settings</string>
     <string name="save">Save</string>
-    <string name="native_banner_view">Native banner view</string>
     <string name="scrollable_layout_screen_button">Scrollable layout</string>
+    <string name="open_multiple_banner_view">HTML banners</string>
+    <string name="open_multiple_native_banner_view">Native banners</string>
     <string name="use_rtb_for_audio_advertisement">Use RTB for audio advertisement</string>
     <string name="placeholder_show_hide">PLACEHOLDER SHOW/HIDE</string>
     <string name="product_creative">Product creative</string>
+    <string name="multiple_product_creative">Multiplе product creative</string>
+    <string name="single_impression">SINGLE IMPRESSION</string>
+    <string name="inlayout">InLayout</string>
+    <string name="multiple_impressions">MULTIPLE IMPRESSIONS (EXPERIMENTAL)</string>
+    <string name="html_banners">HTML banners</string>
+    <string name="native_banners">Native banners (EXPERIMENTAL)</string>
+    <string name="product_creatives">Product Creatives</string>
+    <string name="fullscreen">Fullscreen</string>
+    <string name="programmatically">Programmatically</string>
+    <string name="media_impressions">MEDIA (EXPERIMENTAL)</string>
 </resources>
