--- a/advertising-demo-app/app/src/main/res/values/strings.xml
+++ b/advertising-demo-app/app/src/main/res/values/strings.xml
@@ -77,4 +77,5 @@
     <string name="fullscreen">Fullscreen</string>
     <string name="programmatically">Programmatically</string>
     <string name="media_impressions">MEDIA (EXPERIMENTAL)</string>
+    <string name="no_advertisement">No advertisement</string>
 </resources>
