--- a/advertising-demo-app/app/src/main/res/values/strings.xml
+++ b/advertising-demo-app/app/src/main/res/values/strings.xml
@@ -58,8 +58,6 @@
     <string name="enable_compression">Enable compression</string>
     <string name="open_programmatically_view">programmatically</string>
     <string name="open_recycler_view">RECYCLER VIEW</string>
-    <string name="video_player">Video Player</string>
-    <string name="settings">Settings</string>
     <string name="save">Save</string>
     <string name="scrollable_layout_screen_button">Scrollable layout</string>
     <string name="open_multiple_banner_view">HTML banners</string>
@@ -78,4 +76,5 @@
     <string name="programmatically">Programmatically</string>
     <string name="media_impressions">MEDIA (EXPERIMENTAL)</string>
     <string name="no_advertisement">No advertisement</string>
+    <string name="media">Media</string>
 </resources>
