--- a/advertising-demo-app/app/src/main/res/values/strings.xml
+++ b/advertising-demo-app/app/src/main/res/values/strings.xml
@@ -58,6 +58,9 @@
     <string name="enable_compression">Enable compression</string>
     <string name="open_programmatically_view">programmatically</string>
     <string name="open_recycler_view">RECYCLER VIEW</string>
+    <string name="audio_player">Audio player</string>
+    <string name="video_player">Video Player</string>
+    <string name="settings">Settings</string>
     <string name="save">Save</string>
     <string name="scrollable_layout_screen_button">Scrollable layout</string>
     <string name="open_multiple_banner_view">HTML banners</string>
@@ -75,6 +78,8 @@
     <string name="fullscreen">Fullscreen</string>
     <string name="programmatically">Programmatically</string>
     <string name="media_impressions">MEDIA (EXPERIMENTAL)</string>
-    <string name="no_advertisement">No advertisement</string>
     <string name="media">Media</string>
+    <string name="banner_viewed_alert">id: %s | event: VIEWED</string>
+    <string name="banner_loaded_alert">id: %s | event: LOADED</string>
+    <string name="banner_tapped_alert">id: %s | event: CLICKED</string>
 </resources>
