--- a/advertising-demo-app/app/src/main/res/values/strings.xml
+++ b/advertising-demo-app/app/src/main/res/values/strings.xml
@@ -18,68 +18,24 @@
 
 <resources>
     <string name="app_name">AdvertisingSDK</string>
-    <string name="title_activity_new_banner">NewBannerActivity</string>
 
-    <string name="size_header" translatable="false">Size</string>
-
-    <!-- Size Preferences -->
-    <string name="sizes">Sizes</string>
-
-    <string name="type_of_banner">Type of banner</string>
-    <string name="placementId">PlacementId</string>
-
-    <string name="add_advertisement">Add advertisement</string>
-    <string name="init_lib">Initialize library</string>
-    <string name="example_240x320_400x500">Example: 240x320;400x500</string>
-    <string name="example_1234">Example: 1234</string>
-    <string name="example_15">Example: 15</string>
     <string name="refresh">Refresh</string>
-    <string name="timeout">Timeout</string>
-    <string name="store_url_hint">URL of application in Google Play Store</string>
-    <string name="unique_developer_key">Unique developer key</string>
-    <string name="the_developer_s_secret_key_for_authorization_of_the_request">The developer\'s secret key for authorization of the request</string>
-    <string name="a_fallback_id_for_example_for_networks">A fallback id, for example for networks.</string>
-    <string name="the_unique_id_of_the_application_user_or_the_email_specified_during_the_registration_process">The unique id of the application user, or the email specified during the registration process</string>
-    <string name="user_id">User id</string>
-    <string name="tag_id">Tag id</string>
-    <string name="api_secret">Api secret</string>
-    <string name="store_url">Store url</string>
-    <string name="api_key">API key</string>
-    <string name="external_exception">External Exception</string>
-    <string name="post_request_url">Request url</string>
-    <string name="http_url">/something or http(s)://url</string>
-    <string name="base_url">Base url</string>
-    <string name="open_logs">Open logs</string>
-    <string name="enable_add_logs">Enable logs</string>
-    <string name="banner_2">Banner 2</string>
-    <string name="show">Show</string>
-    <string name="id_of_publisher">ID of publisher</string>
-    <string name="publisher_id">Publisher ID</string>
-    <string name="enable_compression">Enable compression</string>
-    <string name="open_programmatically_view">programmatically</string>
-    <string name="open_recycler_view">RECYCLER VIEW</string>
-    <string name="audio_player">Audio player</string>
-    <string name="video_player">Video Player</string>
-    <string name="settings">Settings</string>
-    <string name="save">Save</string>
-    <string name="scrollable_layout_screen_button">Scrollable layout</string>
-    <string name="open_multiple_html_banner_view">HTML banners</string>
-    <string name="open_multiple_image_banner_view">Image banners</string>
-    <string name="placeholder_show_hide">PLACEHOLDER SHOW/HIDE</string>
     <string name="product_creative">Product creative</string>
-    <string name="multiple_product_creative">Multiplе product creative</string>
-    <string name="single_impression">SINGLE IMPRESSION</string>
-    <string name="inlayout">InLayout</string>
-    <string name="multiple_impressions">MULTIPLE IMPRESSIONS (EXPERIMENTAL)</string>
-    <string name="html_banners">HTML banners</string>
-    <string name="image_banners">Image banners (EXPERIMENTAL)</string>
+    <string name="get_product_creative">Tap me to get product creative</string>
+    <string name="get_product_creatives">Tap me to get multiple product creatives</string>
+    <string name="single_impression">Single impression</string>
+    <string name="multiple_impressions">Multiple impressions</string>
     <string name="product_creatives">Product Creatives</string>
-    <string name="fullscreen">Fullscreen</string>
-    <string name="programmatically">Programmatically</string>
-    <string name="media_impressions">MEDIA (EXPERIMENTAL)</string>
-    <string name="media">Media</string>
-    <string name="creative">Creative</string>
-    <string name="load_html_banner">Load HTML banner</string>
-    <string name="load_media">Load media</string>
-    <string name="load_image_banner">Load image banner</string>
+    <string name="banner_inlayout">Banner (inlayout)</string>
+    <string name="banner_programmatically">Banner (programmatically)</string>
+    <string name="banner_media">Banner (media)</string>
+    <string name="banner_fullscreen">Banner (fullscreen)</string>
+    <string name="banner_collection_view">Banner (collection-view)</string>
+    <string name="banners">Banners</string>
+    <string name="vast_inline_simple">VAST_Inline_Simple</string>
+    <string name="vast_wrapper_simple">VAST_Wrapper_Simple</string>
+    <string name="vast_wrapper_compound">VAST_Wrapper_Compound</string>
+    <string name="vast_wrapper_chain_less_5">VAST_Wrapper_Chain_Less_5</string>
+    <string name="vast_wrapper_chain_greater_5">VAST_Wrapper_Chain_Greater_5</string>
+    <string name="vast_wrapper_chain_loop">VAST_Wrapper_Chain_Loop</string>
 </resources>
